Fix bug in dropdowns on iOS devices. Move local font loading to separate file and hook to add_theme_support

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://www.johnparris.com/alienship/
 Author: John Parris
 Author URI: http://www.johnparris.com/alienship/
 Description: Alien Ship is a responsive starter theme for WordPress.
-Version: 0.93
+Version: 0.94
 License: GNU General Public License
 License URI: license.txt
 Tags: blue, green, silver, red, orange, white, black, light, dark, one-column, two-columns, right-sidebar, fixed-width, flexible-width, custom-colors, custom-header, custom-menu, threaded-comments, translation-ready, sticky-post, rtl-language-support, microformats, featured-images, post-formats
@@ -12,60 +12,7 @@ Tags: blue, green, silver, red, orange, white, black, light, dark, one-column, t
 
 /* Fonts
 ---------------------------- */
-@font-face {
-    font-family: 'Open Sans';
-    font-weight: lighter;
-    font-style: normal;
-    src: url('inc/fonts/opensans/OpenSans-Light.eot');
-    src: url('inc/fonts/opensans/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
-         url('inc/fonts/opensans/OpenSans-Light.woff') format('woff'),
-         url('inc/fonts/opensans/OpenSans-Light.ttf') format('truetype'),
-         url('inc/fonts/opensans/OpenSans-Light.svg#OpenSansLight') format('svg');
-}
 
-@font-face {
-    font-family: 'Open Sans';
-    src: url('inc/fonts/opensans/OpenSans-Regular.eot');
-    src: url('inc/fonts/opensans/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
-         url('inc/fonts/opensans/OpenSans-Regular.woff') format('woff'),
-         url('inc/fonts/opensans/OpenSans-Regular.ttf') format('truetype'),
-         url('inc/fonts/opensans/OpenSans-Regular.svg#OpenSansRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Open Sans';
-    font-weight: bold;
-    font-style: normal;
-    src: url('inc/fonts/opensans/OpenSans-Bold.eot');
-    src: url('inc/fonts/opensans/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
-         url('inc/fonts/opensans/OpenSans-Bold.woff') format('woff'),
-         url('inc/fonts/opensans/OpenSans-Bold.ttf') format('truetype'),
-         url('inc/fonts/opensans/OpenSans-Bold.svg#OpenSansBold') format('svg');
-}
-
-@font-face {
-    font-family: 'Open Sans';
-    font-weight: normal;
-    font-style: italic;
-    src: url('inc/fonts/opensans/OpenSans-Italic.eot');
-    src: url('inc/fonts/opensans/OpenSans-Italic.eot?#iefix') format('embedded-opentype'),
-         url('inc/fonts/opensans/OpenSans-Italic.woff') format('woff'),
-         url('inc/fonts/opensans/OpenSans-Italic.ttf') format('truetype'),
-         url('inc/fonts/opensans/OpenSans-Italic.svg#OpenSansItalic') format('svg');
-}
-
-@font-face {
-    font-family: 'Open Sans';
-    font-weight: bold;
-    font-style: italic;
-    src: url('inc/fonts/opensans/OpenSans-BoldItalic.eot');
-    src: url('inc/fonts/opensans/OpenSans-BoldItalic.eot?#iefix') format('embedded-opentype'),
-         url('inc/fonts/opensans/OpenSans-BoldItalic.woff') format('woff'),
-         url('inc/fonts/opensans/OpenSans-BoldItalic.ttf') format('truetype'),
-         url('inc/fonts/opensans/OpenSans-BoldItalic.svg#OpenSansBoldItalic') format('svg');
-}
 
 h1 {
   font-size: 30px;
